--- a/netflix-clone/src/Components/Rows/Row/row.css
+++ b/netflix-clone/src/Components/Rows/Row/row.css
@@ -1,5 +1,5 @@
 .row__poster{
-    width: 10055%;
+    width: 100%;
     object-fit: contain;
     max-height: 100px;
     transition: transform 450ms;
@@ -7,8 +7,8 @@
 }
 .row__posters{
     display: flex;
-    overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden ;
+    overflow-x: scroll;
     padding: 20px;
 }
 .row__posters::-webkit-scrollbar{
